# wpick

./: .gitignore  CHANGELOG.md  COMPAT.md  Cargo.toml  ERRORS_TO_AVOID.md  LICENSE  PKGBUILD  PROMPTS.md  README.md  SEQUENCE.md
.cargo/: config.toml
.github/workflows/: release.yml
assets/: fragment.wgsl  fragment_yuv.wgsl  vertex.wgsl
docs/: DAEMON.md
skills/: wpick-core.md  wpick-daemon.md  wpick-index.md  wpick-scaffold.md  wpick-tui.md
wpick-core/: Cargo.toml
wpick-core/src/: cache.rs  config.rs  discovery.rs  error.rs  ipc.rs  lib.rs  model.rs  pkg.rs  pkg.rs.save
wpick-daemon/: Cargo.toml
wpick-daemon/src/: audio.rs  ducking.rs  hotkey.rs  hw_decode.rs  ipc_server.rs  main.rs  renderer.rs  state.rs  video.rs
wpick-tui/: Cargo.toml
wpick-tui/src/: app.rs  client.rs  main.rs  ui.rs
wpick-webview/: Cargo.toml
wpick-webview/src/: main.rs
