[package]
name    = "wpick-core"
version = "0.3.0"
edition = "2021"

[dependencies]
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
tokio           = { workspace = true }
toml            = "0.8"
dirs            = "5"
rusqlite        = { version = "0.32", features = ["bundled"] }
image           = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
keyvalues-serde = "0.2"
walkdir         = "2"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full"] }
