[package]
name    = "wpick-core"
version = "0.5.1"
edition = "2021"
license = "MIT"

[dependencies]
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
tokio           = { workspace = true }
toml            = "0.8"
dirs            = "5"
rusqlite        = { version = "0.32", features = ["bundled"] }
keyvalues-serde = "0.2"
walkdir         = "2"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full"] }
