[package]
name    = "wpick-daemon"
version = "0.5.1"
edition = "2021"
license = "MIT"

[[bin]]
name = "wpick-daemon"
path = "src/main.rs"

[dependencies]
wpick-core              = { path = "../wpick-core" }
serde                   = { workspace = true }
serde_json              = { workspace = true }
anyhow                  = { workspace = true }
tokio                   = { workspace = true }
tracing                 = { workspace = true }
tracing-subscriber      = { version = "0.3", features = ["env-filter"] }
tracing-appender        = "0.2"
wayland-client          = { version = "0.31", features = ["system"] }
wayland-protocols-wlr   = { version = "0.3", features = ["client"] }
ffmpeg-next             = "8"
ffmpeg-sys-next         = "8"
libc                    = "0.2"
rodio                   = "0.19"
libpulse-binding        = "2"
image                   = { version = "0.25", default-features = false, features = ["jpeg", "gif", "png", "webp"] }
evdev                   = "0.12"
fastrand                = "2"
