[package]
name    = "wpick-tui"
version = "0.5.1"
edition = "2021"
license = "MIT"

[[bin]]
name = "wpick"
path = "src/main.rs"

[dependencies]
wpick-core         = { path = "../wpick-core" }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui            = "0.30"
crossterm          = "0.29"
clap               = { version = "4", features = ["derive"] }
clap_complete      = "4"
clap_mangen        = "0.2"
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
image         = { version = "0.25", default-features = false, features = ["jpeg", "gif", "png", "webp"] }
chrono        = { version = "0.4", features = ["clock"] }
