[package]
name    = "wpick-webview"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "wpick-webview"
path = "src/main.rs"

[dependencies]
gtk                    = "0.18"
webkit2gtk             = { version = "2.0", features = ["v2_12"] }
gtk-layer-shell        = { version = "0.8", features = ["v0_6"] }
gdk                    = "0.18"
anyhow                 = { workspace = true }
libc                   = "0.2"
glib                   = "0.18"
